--- a/index.html
+++ b/index.html
@@ -139,42 +139,7 @@
 <!-- Skills section ends here -->
 
 
-
-<!-- Contact Section Starts here -->
-<section id="contact">
-    <div class="contact">
-        <div class="contact-form">
-            <h2>Email Me</h2>
-            <input type="text" placeholder="username" id="username"><br>
-            <input type="email" placeholder="Type you email" name="" id="contact-email"><br>
-            <textarea name="" id="message" cols="30" rows="10"></textarea>
-            <input type="submit">
-        </div>
-        <div class="address">
-            <address>rOckf, House IV-01 Civil <br> Colony Kohar Road Peshawr</address>
-        </div>
-        <div class="phone">
-            <address>03219954544</address>
-        </div>
-    </div>
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- Footer Section Starts Here -->
+<!-- Contact Section Starts Here -->
     <section id="footer-box">
         <div class="box">
 
@@ -183,6 +148,11 @@
                 <p class="be-first-para">Email me for making professional level Personal Portfolio, Business Websites, and Blog Pages at valuable price with money back guarantee.</p>
                 <a class="email" href="#mailto:idreeskhn098@gmail.com">Email</a>
             </div>
+                <div class="phone">
+                    <address><span class="phone-para">Or call me at </span><br>03219954544</address>
+                </div>
+            
+            
             <div class="feedback">
 
                 <textarea name="" id="" cols="60" rows="7" placeholder="Your Feedback Here"></textarea> <br>
@@ -190,6 +160,7 @@
             </div>  
         </div>
     </section>
+    <!-- Contact Section Ends Here -->
 
 
 <!-- Bottom Section Starts here -->
