about me updated

--- a/index.html
+++ b/index.html
@@ -139,6 +139,34 @@
 <!-- Skills section ends here -->
 
 
+
+
+<!-- About Section Starts here -->
+
+    <section id="about">
+        <h1>About Me</h1>
+        <div class="container">
+
+            <div class="about">
+                <p class="about">I'm Professional Web and Mobile App <br> Development, Trainer and Content Creator. <br>Seeking for Valuable Job in top end It Companies <br> and Software House Abroad.</p>
+                <address>idreeskhn098@gmail.com <br>
+                rockf0022@gmail.com <br>
+                03219954544 <br>
+                03151900897
+                </address>
+            </div>
+               
+            
+            <div class="about-image">
+                <img src="./images/idrees.JPG" width="200px" alt="">
+            </div>
+        </div>
+    </section>
+
+
+<!-- About Section Starts here -->
+
+
 <!-- Contact Section Starts Here -->
     <section id="footer-box">
         <div class="box">
