--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <!-- Nav-bar Section -->
         <div class="nav-bar">
             <ul>
-                <li><a href="#Projects">Home</a></li>
+                <li><a href="#Home">Home</a></li>
                 <li><a href="#Projects">Projects</a></li>
                 <li><a href="#skill">Skills</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="#footer-box">Contact</a></li>
+                <li><a href="#about">About</a></li>
 
 
                 <!-- Search Section -->
@@ -229,7 +229,7 @@
 
 <div id="copyright">
     <h3>Idrees Qureishi, rOckf, Civil Colony, Kohat Road, Peshawar</h3>
-    <p class="copyright-para">Copyright © 2024, All Rights Reserved</p>
+    <p class="copyright-para">Copyright © 2024, Idrees_Qureishi, All Rights Reserved</p>
 </div>
     <!-- Top Icon -->
 <div class="top-icon">
